// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`placeContent renders 0 1`] = `
Array [
  .c0 {
  place-content: 0;
}

<div
    className="c0"
  />,
  .c0 {
  place-content: 0;
}

<div
    className="c0"
  />,
  .c0 {
  place-content: 0;
}

<div
    className="c0"
  />,
  .c0 {
  place-content: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`placeContent renders function 1`] = `
Array [
  .c0 {
  place-content: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  place-content: has;
}

<div
    className="c0"
  />,
  .c0 {
  place-content: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  place-content: has;
}

<div
    className="c0"
  />,
]
`;

exports[`placeContent renders invalid theme path 1`] = `
Array [
  .c0 {
  place-content: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  place-content: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  place-content: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  place-content: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`placeContent renders negative number 1`] = `
Array [
  .c0 {
  place-content: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  place-content: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  place-content: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  place-content: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`placeContent renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  place-content: July;
}

@media screen and (min-width:November) {
  .c0 {
    place-content: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    place-content: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    place-content: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    place-content: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  place-content: July;
}

@media screen and (min-width:November) {
  .c0 {
    place-content: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    place-content: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    place-content: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    place-content: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  place-content: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    place-content: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    place-content: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    place-content: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    place-content: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  place-content: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    place-content: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    place-content: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    place-content: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    place-content: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`placeContent renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    place-content: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    place-content: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    place-content: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    place-content: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    place-content: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    place-content: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    place-content: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    place-content: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    place-content: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    place-content: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    place-content: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    place-content: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    place-content: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    place-content: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    place-content: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    place-content: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`placeContent renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  place-content: July;
}

@media May {
  .c0 {
    place-content: August;
  }
}

@media April {
  .c0 {
    place-content: September;
  }
}

@media January {
  .c0 {
    place-content: November;
  }
}

@media April {
  .c0 {
    place-content: August;
  }
}

@media June {
  .c0 {
    place-content: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  place-content: July;
}

@media May {
  .c0 {
    place-content: August;
  }
}

@media April {
  .c0 {
    place-content: September;
  }
}

@media January {
  .c0 {
    place-content: November;
  }
}

@media April {
  .c0 {
    place-content: August;
  }
}

@media June {
  .c0 {
    place-content: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  place-content: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    place-content: November;
  }
}

@media April {
  .c0 {
    place-content: January;
  }
}

@media January {
  .c0 {
    place-content: December;
  }
}

@media April {
  .c0 {
    place-content: April;
  }
}

@media June {
  .c0 {
    place-content: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  place-content: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    place-content: November;
  }
}

@media April {
  .c0 {
    place-content: January;
  }
}

@media January {
  .c0 {
    place-content: December;
  }
}

@media April {
  .c0 {
    place-content: April;
  }
}

@media June {
  .c0 {
    place-content: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`placeContent renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    place-content: July;
  }
}

@media April {
  .c0 {
    place-content: August;
  }
}

@media January {
  .c0 {
    place-content: September;
  }
}

@media April {
  .c0 {
    place-content: November;
  }
}

@media June {
  .c0 {
    place-content: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    place-content: July;
  }
}

@media April {
  .c0 {
    place-content: August;
  }
}

@media January {
  .c0 {
    place-content: September;
  }
}

@media April {
  .c0 {
    place-content: November;
  }
}

@media June {
  .c0 {
    place-content: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    place-content: January;
  }
}

@media April {
  .c0 {
    place-content: December;
  }
}

@media January {
  .c0 {
    place-content: April;
  }
}

@media April {
  .c0 {
    place-content: May;
  }
}

@media June {
  .c0 {
    place-content: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    place-content: January;
  }
}

@media April {
  .c0 {
    place-content: December;
  }
}

@media January {
  .c0 {
    place-content: April;
  }
}

@media April {
  .c0 {
    place-content: May;
  }
}

@media June {
  .c0 {
    place-content: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`placeContent renders postitive number 1`] = `
Array [
  .c0 {
  place-content: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  place-content: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  place-content: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  place-content: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`placeContent renders string 1`] = `
Array [
  .c0 {
  place-content: July;
}

<div
    className="c0"
  />,
  .c0 {
  place-content: July;
}

<div
    className="c0"
  />,
  .c0 {
  place-content: June;
}

<div
    className="c0"
  />,
  .c0 {
  place-content: June;
}

<div
    className="c0"
  />,
]
`;

exports[`placeContent renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`placeContent renders valid theme path 1`] = `
Array [
  .c0 {
  place-content: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  place-content: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  place-content: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  place-content: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
